; ModuleID = '/home/carl/AnghaBench/zstd/contrib/seekable_format/examples/extr_parallel_processing.c_fclose_orDie.c'
source_filename = "/home/carl/AnghaBench/zstd/contrib/seekable_format/examples/extr_parallel_processing.c_fclose_orDie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"fclose\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @fclose_orDie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @fclose_orDie(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @fclose(i32* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  ret i64 0

7:                                                ; preds = %1
  %8 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @exit(i32 6) #3
  unreachable
}

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
